Adding debugging logic

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-    - 0.1
+    - 0.10
     - 0.12
 notifications:
     email:
@@ -8,6 +8,10 @@ notifications:
             - ypt-team@yahoo-inc.com
         on_success: change
         on_failure: always
+before_deploy:
+    - test $TRAVIS_TEST_RESULT = 0 \
+        && echo "travis branch " $TRAVIS_BRANCH \
+        && echo "travis build directory " $TRAVIS_BUILD_DIR
 deploy:
     provider: npm
     email: ypt-team@yahoo-inc.com
