--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-csp",
-  "version": "0.0.0",
+  "version": "0.0.0-alpha",
   "description": "Express middleware that simplifies using Content Security Policy",
   "licenses": [
     {
