--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
     - 0.10
     - 0.12
 after_success:
-    - test echo $TRAVIS_BRANCH
+    - echo $TRAVIS_BRANCH
 deploy:
     provider: npm
     email: ypt-team@yahoo-inc.com
