--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: node_js
 node_js:
     - 0.10
     - 0.12
-after_success:
-    - echo "branch" $TRAVIS_BRANCH \
-        && echo "tag" $TRAVIS_TAG
+before_deploy:
+    - echo " tag " $TRAVIS_TAG \
+        && test $(cat $TRAVIS_BUILD_DIR/package.json | grep version | awk '{print $2}' | sed 's/"//g' | sed 's/,//g') = $TRAVIS_TAG \
+        && export $VALID_VERSION=true
+        && echo "Deploying in motion.."
 deploy:
     provider: npm
     email: ypt-team@yahoo-inc.com
